--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "seed:dev": "npx prisma migrate reset --force && node ./prisma/db/seed.cjs"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
