added cors (required for multi port functionality), http (socket-io requirement), concurrently (also req for multi port func). changed scripts so start:dev is for more accurate whole project testing, new script start:server for only server

--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "seed:dev": "npx prisma migrate reset --force && node ./prisma/db/seed.cjs",
-    "start:dev": "nodemon ./server.cjs"
+    "start:server": "nodemon ./server.cjs",
+    "start:dev":"concurrently \"nodemon server.cjs\" \"npm run dev\""
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
